force-app/main/default/objects/AcceptanceCriteria__c/AcceptanceCriteria__c.object-meta.xml
<CustomObject>
    <label>Acceptance Criteria</label>
    <nameField>
        <displayFormat>AC-{00000000}</displayFormat>
        <label>Criteria Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acceptance Criterion</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>