force-app/main/default/objects/AcceptanceCriteria__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Definition</fullName>
            </value>
            <value>
                <fullName>Team Review</fullName>
            </value>
            <value>
                <fullName>IT Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>