force-app/main/default/objects/AcceptanceCriteria__c/fields/systemEnhancement__c.field-meta.xml
<CustomField>
    <fullName>systemEnhancement__c</fullName>
    <label>System Enhancement</label>
    <referenceTo>SystemEnhancement__c</referenceTo>
    <relationshipLabel>Acceptance Criterion</relationshipLabel>
    <relationshipName>Acceptance_Criterion</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>